<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>tf_classification_py</name>
  <version>0.1.0</version>
  <description>
    Python nodes for image classification tasks using Tensorflow.
  </description>
  <maintainer email="alberto.soragna@gmail.com">Alberto Soragna</maintainer>
  <author email="alberto.soragna@gmail.com">Alberto Soragna</author>

  <license>Apache License 2.0</license>

  <exec_depend>python-tensorflow-pip</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

  <exec_depend>tf_interfaces</exec_depend>
  <exec_depend>ros2_tf_core</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
