<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf_interfaces</name>
  <version>0.1.0</version>
  <description>
    Message and service interfaces for ROS 2 Tensorflow
  </description>
  <maintainer email="alberto.soragna@gmail.com">Alberto Soragna</maintainer>
  <author email="alberto.soragna@gmail.com">Alberto Soragna</author>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>