<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>tf_classification_py</name>
  <version>0.5.1</version>
  <description>
    Python nodes which were previously in the ros2/examples repository but are now just used for demo purposes.
  </description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <license>Apache License 2.0</license>

  <author email="esteve@osrfoundation.org">Esteve Fernandez</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>my_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>tensorflow</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
